--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,13 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.6.0</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
@@ -86,6 +93,53 @@
 					</excludes>
 				</configuration>
 			</plugin>
+
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.12</version>
+				<executions>
+					
+					<execution>
+					<id>prepare-agent</id>
+					<goals>
+						<goal>prepare-agent</goal>
+					</goals>
+					</execution>
+
+					
+					<execution>
+					<id>report</id>
+					<phase>test</phase>
+					<goals>
+						<goal>report</goal>
+					</goals>
+					</execution>
+
+					
+					<execution>
+					<id>check</id>
+					<goals>
+						<goal>check</goal>
+					</goals>
+					<configuration>
+						<rules>
+						<rule>
+							<element>BUNDLE</element>
+							<limits>
+							<limit>
+								<counter>INSTRUCTION</counter>
+								<value>COVEREDRATIO</value>
+								<minimum>0.80</minimum>
+							</limit>
+							</limits>
+						</rule>
+						</rules>
+					</configuration>
+					</execution>
+				</executions>
+				</plugin>
+
 		</plugins>
 	</build>
 
